# blockchain_5th_sem

BFT/: pyproject.toml
BFT/src/: block.py  chain.py  main.py  node.py  transaction.py  utils.py  wallet.py
double_spending_attack_probability/: pyproject.toml
double_spending_attack_probability/src/: main.py
proof_of_work/: pyproject.toml
proof_of_work/src/: abstract.py  block.py  blockchain.py  chain.py  custom_exceptions.py  main.py  mining.py  node.py  transaction.py  transaction_pool.py  utils.py  wallet.py  wallet_address.py
proof_of_work/tests/: chain_test.py  fixtures.py  transaction_test.py
