[tool.poetry]
name = "bft"
version = "0.1.0"
description = ""
authors = ["Ivan Mihun <vsk76090@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cryptography = "^43.0.3"
pendulum = "^3.0.0"
merkly = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
