[tool.poetry]
name = "double-spending-attack-probability"
version = "0.1.0"
description = ""
authors = ["Ivan Mihun <vsk76090@gmail.com>"]
readme = "README.md"
packages = [{include = "double_spending_attack_probability"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
