[tool.poetry]
name = "proof-of-work"
version = "0.1.0"
description = ""
authors = ["Ivan Mihun <vsk76090@gmail.com>"]
readme = "README.md"
packages = [{include = "proof_of_work"}]

[tool.poetry.dependencies]
python = "^3.12"
pendulum = "^3.0.0"
merkly = "^1.0.2"
cryptography = "^43.0.1"
pytest = "^8.3.3"
base58 = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
